--- a/src/pages/StyleLogin.css
+++ b/src/pages/StyleLogin.css
@@ -3,9 +3,34 @@
     display: flex;
     flex-direction: column;
     margin: auto;
+    border-radius: 50px;
     margin-top: 100px;
-
-    background-color: aquamarine;
+    background-color: #b7efc5;
     padding: 100px;
     width: 10%;
+}
+
+input {
+    border: 1px solid rgb(228, 226, 226);
+    border-radius: 5px;
+    margin: 10px;
+    padding: 8px;
+    width: 200px;
+}
+
+h4 {
+  color: #10451d ;
+  font-size: 30px;
+  font-weight: 250px;
+}
+
+.style-button{
+    background-color: #25a244;
+    border: 1px solid #25a244;
+    border-radius: 5px;
+    color: white;
+    cursor: pointer;
+    font-size: 15px;
+    margin-top: 10px;
+    padding: 10px;
 }
